--- a/Doudella/Views/Partials/blockgrid/Components/VolunteerCard.cshtml
+++ b/Doudella/Views/Partials/blockgrid/Components/VolunteerCard.cshtml
@@ -6,7 +6,7 @@
 
 
 
-
+@* 
 	<div class="column large-third tab-full" data-aos="fade-up">
 		<div style="width: 275px; height: 500px;" class="card">
 			<img style="width: 275px; height: 250px;" src="@Model.Content.CaseImage.Url()" alt="Card Image">
@@ -18,8 +18,9 @@
 		</div>
 	</div>
 
-	
+	 *@
 
+<h3>@Model.Content.VolunteerCard</h3>
 
 
 
