--- a/Doudella/Views/Partials/blockgrid/Components/CassesContent.cshtml
+++ b/Doudella/Views/Partials/blockgrid/Components/CassesContent.cshtml
@@ -7,8 +7,8 @@
 
 
 
-	<div class="column large-third tab-full" data-aos="fade-up">
-		<div style="width: 275px; height: 500px;" class="card">
+	
+		<div style="width: 275px; " class="card">
 			<img style="width: 275px; height: 250px;" src="@Model.Content.CaseImage.Url()" alt="Card Image">
 			<div class="card-content">
 				<h3 class="card-title">@Model.Content.CaseName</h3>
@@ -16,7 +16,6 @@
 				<a href="@Model.Content.CaseUrl" class="btn btn--primary" title="Go to Card Page">Go to Page</a>
 			</div>
 		</div>
-	</div>
 
 	
 
